Updated timer functionality, the 'start' button now runs timers from an array, allowing multiple timers to be run one after another, instead of just one timer

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         <input placeholder="mm:ss">
         <button>Start</button>
     </div>
-
-    <h1 class="countdown">00:00</h1>
+    <div class="timer-display">
+        <h1 class="timer">00:00</h1>
+        <h2 class="timer-label"></h2>
+    </div>
+    
 
     <script src="script.js"></script>
 </body>
