Created an 'add' button that will add the inputted time into the timerSequence array. Clicking the 'start' button will then run all the time's that were added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <div class="timer-controls">
         <input placeholder="mm:ss">
-        <button>Start</button>
+        <button class="add-button">add</button>
     </div>
+
+    <div class="start-container">
+        <button class="start-button">Start</button>
+    </div>
+    
     <div class="timer-display">
         <h1 class="timer">00:00</h1>
         <h2 class="timer-label"></h2>
